--- a/co-simulation/fed/mosaic-infrastructure/pom.xml
+++ b/co-simulation/fed/mosaic-infrastructure/pom.xml
@@ -33,6 +33,13 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+        <groupId>org.eclipse.mosaic</groupId>
+        <artifactId>mosaic-utils</artifactId>
+        <version>${mosaic.version}</version>
+        <type>test-jar</type>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
         <groupId>gov.dot.fhwa.saxton</groupId>
         <artifactId>mosaic-carma-utils</artifactId>
         <version>${mosaic.version}</version>
