--- a/co-simulation/fed/mosaic-carla/pom.xml
+++ b/co-simulation/fed/mosaic-carla/pom.xml
@@ -65,31 +65,21 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-      <dependency>
-          <groupId>commons-codec</groupId>
-          <artifactId>commons-codec</artifactId>
-          <version>1.15</version>
-      </dependency>
-      <dependency>
-        <groupId>clj-python</groupId>
-        <artifactId>libpython-clj</artifactId>
-        <version>2.024</version>
-      </dependency>
-      <dependency>
-        <groupId>cnuernber</groupId>
-        <artifactId>dtype-next</artifactId>
-        <version>10.000-beta-32</version>
-      </dependency>
-      <dependency>
-        <groupId>net.java.dev.jna</groupId>
-        <artifactId>jna</artifactId>
-        <version>5.12.1</version>
-      </dependency>
-      <dependency>
-        <groupId>org.clojure</groupId>
-        <artifactId>data.json</artifactId>
-        <version>1.0.0</version>
-      </dependency>
+    <dependency>
+        <groupId>commons-codec</groupId>
+        <artifactId>commons-codec</artifactId>
+         <version>1.15</version>
+     </dependency>
+     <dependency>
+      <groupId>org.apache.xmlrpc</groupId>
+      <artifactId>xmlrpc-client</artifactId>
+      <version>3.1.3</version>
+     </dependency>
+     <dependency>
+      <groupId>org.apache.xmlrpc</groupId>
+      <artifactId>xmlrpc-common</artifactId>
+      <version>3.1.1</version>
+     </dependency>
   </dependencies>
 
   <profiles>
@@ -104,6 +94,18 @@
                             <configuration>
                                 <skipTests>true</skipTests>
                             </configuration>
+                        </plugin>
+                        <plugin>
+                          <artifactId>maven-assembly-plugin</artifactId>
+                          <executions>
+                            <execution>
+                              <id>make-assembly</id>
+                              <phase>package</phase>
+                              <goals>
+                                <goal>single</goal>
+                              </goals>
+                            </execution>
+                          </executions>
                         </plugin>
                     </plugins>
                 </pluginManagement>
