--- a/co-simulation/fed/mosaic-carla/pom.xml
+++ b/co-simulation/fed/mosaic-carla/pom.xml
@@ -10,9 +10,10 @@
         <version>22.1-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
   </parent>
-
+  
   <artifactId>mosaic-carla</artifactId>
   <name>Eclipse MOSAIC CARLA Ambassador</name>
+
 
   <dependencies>
     <dependency>
@@ -59,11 +60,16 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-      <dependency>
-          <groupId>commons-codec</groupId>
-          <artifactId>commons-codec</artifactId>
-          <version>1.15</version>
-      </dependency>
+    <dependency>
+        <groupId>commons-codec</groupId>
+        <artifactId>commons-codec</artifactId>
+         <version>1.15</version>
+     </dependency>
+     <dependency>
+        <groupId>org.apache.xmlrpc</groupId>
+        <artifactId>xmlrpc-client</artifactId>
+        <version>3.1.3</version>
+     </dependency>
   </dependencies>
 
   <profiles>
